Update: Previous donations are visible in the panel

--- a/static/auth.html
+++ b/static/auth.html
@@ -46,7 +46,7 @@
                                   <i class="now-ui-icons users_circle-08 lg"></i>
                                 </span>
                               </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="First Name...">
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="First Name">
                             </div>
                           </div>
                           <div class="form-group mb-2">
@@ -56,7 +56,7 @@
                                   <i class="now-ui-icons text_caps-small lg"></i>
                                 </span>
                               </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Last Name...">
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Last Name">
                             </div>
                           </div>
                           <div class="form-group mb-3">
@@ -66,7 +66,7 @@
                                   <i class="now-ui-icons ui-1_email-85 lg"></i>
                                 </span>
                               </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email...">
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email">
                             </div>
                           </div>
                           <button type="submit" class="btn mt-4 mb-3 btn-light rounded btn-lg text-primary">Get Started</button>
@@ -101,7 +101,7 @@
                                   <i class="now-ui-icons users_circle-08 lg"></i>
                                 </span>
                               </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="First Name...">
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="First Name" name="first_name">
                             </div>
                           </div>
                           <div class="form-group mb-2">
@@ -111,17 +111,37 @@
                                   <i class="now-ui-icons text_caps-small lg"></i>
                                 </span>
                               </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Last Name...">
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Last Name" name="last_name">
                             </div>
                           </div>
-                          <div class="form-group mb-3">
+                          <div class="form-group mb-2">
                             <div class="input-group border-0">
                               <div class="input-group-prepend ">
                                 <span class="input-group-text" id="basic-addon1">
                                   <i class="now-ui-icons ui-1_email-85 lg"></i>
                                 </span>
                               </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email...">
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email" name="email">
+                            </div>
+                          </div>
+                          <div class="form-group mb-2">
+                            <div class="input-group border-0">
+                              <div class="input-group-prepend ">
+                                <span class="input-group-text" id="basic-addon1">
+                                  <i class="now-ui-icons text_caps-small lg"></i>
+                                </span>
+                              </div>
+                              <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Password" name="password">
+                            </div>
+                          </div>
+                          <div class="form-group mb-2">
+                            <div class="input-group border-0">
+                              <div class="input-group-prepend ">
+                                <span class="input-group-text" id="basic-addon1">
+                                  <i class="now-ui-icons ui-1_email-85 lg"></i>
+                                </span>
+                              </div>
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Contact No" name="contact_no">
                             </div>
                           </div>
                           <button type="submit" class="btn mt-4 mb-3 btn-light rounded btn-lg text-primary">Get Started</button>
