--- a/static/index.html
+++ b/static/index.html
@@ -39,6 +39,11 @@
                 Hello {{ user.username }}
               </a>
             </li>
+            <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
+                <a class="nav-link" href="/auth/logout">
+                  Logout
+                </a>
+              </li>
           {% endif %}
         </ul>
         <a class="btn btn-light text-primary" href="/donate"><i class="now-ui-icons arrows-1_share-66 mr-1">&nbsp;DONATE NOW</i></a>
