--- a/static/donate_now.html
+++ b/static/donate_now.html
@@ -72,17 +72,17 @@
 <div class="py-5">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
-        <div class="card text-white bg-info mb-3">
-          <div class="card-header">Donated On</div>
-          <div class="card-body">
-            <h5 class="card-title">Item : Quantity</h5>
-            <p class="card-text" contenteditable="true">Description</p>
+      {% for donation in donations %}
+        <div class="col-md-4">
+          <div class="card text-white bg-{% if donation.status %}info{%else%}secondary{%endif%} mb-3">
+            <div class="card-header">Donated On: {{ donation.modified_at }}</div>
+            <div class="card-body">
+              <h5 class="card-title">{{ donation.item }} : {{ donation.quantity }}</h5>
+              <p class="card-text">{{ donation.description }}</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4"></div>
-      <div class="col-md-4"></div>
+      {% endfor %}
     </div>
   </div>
 </div>
