--- a/static/auth.html
+++ b/static/auth.html
@@ -38,27 +38,8 @@
                     </div>
                     <div class="row mt-4 pt-2">
                       <div class="col">
-                        <form>
-                          <div class="form-group mb-2">
-                            <div class="input-group border-0">
-                              <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon1">
-                                  <i class="now-ui-icons users_circle-08 lg"></i>
-                                </span>
-                              </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="First Name">
-                            </div>
-                          </div>
-                          <div class="form-group mb-2">
-                            <div class="input-group border-0">
-                              <div class="input-group-prepend ">
-                                <span class="input-group-text" id="basic-addon1">
-                                  <i class="now-ui-icons text_caps-small lg"></i>
-                                </span>
-                              </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Last Name">
-                            </div>
-                          </div>
+                        <form method="POST" action="/auth/login">
+                          {% csrf_token %}
                           <div class="form-group mb-3">
                             <div class="input-group border-0">
                               <div class="input-group-prepend ">
@@ -66,9 +47,19 @@
                                   <i class="now-ui-icons ui-1_email-85 lg"></i>
                                 </span>
                               </div>
-                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email">
+                              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email" name="email">
                             </div>
                           </div>
+                          <div class="form-group mb-2">
+                              <div class="input-group border-0">
+                                <div class="input-group-prepend ">
+                                  <span class="input-group-text" id="basic-addon1">
+                                    <i class="now-ui-icons text_caps-small lg"></i>
+                                  </span>
+                                </div>
+                                <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Password" name="password">
+                              </div>
+                            </div>
                           <button type="submit" class="btn mt-4 mb-3 btn-light rounded btn-lg text-primary">Get Started</button>
                         </form>
                       </div>
@@ -93,7 +84,8 @@
                     </div>
                     <div class="row mt-4 pt-2">
                       <div class="col">
-                        <form>
+                        <form method="POST" action="/auth/create">
+                          {% csrf_token %}
                           <div class="form-group mb-2">
                             <div class="input-group border-0">
                               <div class="input-group-prepend">
@@ -144,7 +136,7 @@
                               <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Contact No" name="contact_no">
                             </div>
                           </div>
-                          <button type="submit" class="btn mt-4 mb-3 btn-light rounded btn-lg text-primary">Get Started</button>
+                          <button type="submit" value="Get Started" class="btn mt-4 mb-3 btn-light rounded btn-lg text-primary">Get Started</button>
                         </form>
                       </div>
                     </div>
